Forgot about feed aliases

--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -893,8 +893,8 @@ Resources:
                     - 815/feed-rss.xml
                     - 284/feed-rss.xml
                     - 70/feed-rss.xml
-                    - 18/feed-rss.xml
-                    - 24/feed-rss.xml
+                    - criminal/feed-rss.xml
+                    - themoth/feed-rss.xml
               detail-type:
                 - Object Created
               source:
@@ -913,8 +913,8 @@ Resources:
           '815/feed-rss.xml': 4,
           '284/feed-rss.xml': 9,
           '70/feed-rss.xml': 20,
-          '18/feed-rss.xml': 16,
-          '24/feed-rss.xml': 16,
+          'criminal/feed-rss.xml': 16,
+          'themoth/feed-rss.xml': 16,
         };
 
         exports.handler = async (event) => {
