Allow new Say When service in prod

--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -734,14 +734,13 @@ Resources:
 
   SayWhenEcsService:
     Type: AWS::ECS::Service
-    # Condition: EnableWorkers # See README
-    Condition: IsStaging
+    Condition: EnableWorkers # See README
     Properties:
       Cluster: !Ref EcsClusterArn
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: 1
+      DesiredCount: 0
       EnableECSManagedTags: true
       PropagateTags: TASK_DEFINITION
       Tags:
