Allow new Exchange workers

--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -68,9 +68,7 @@ Conditions:
   IsStaging: !Equals [!Ref EnvironmentType, Staging]
   IsPrimaryRegion: !Equals [!Ref RegionMode, Primary]
   HasAuroraEndpoint: !Not [!Equals [!Ref SharedAuroraMysqlEndpoint, ""]]
-  # TODO: re-enable when we move off the old stacks
-  # EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
-  EnableWorkers: !Equals ["true", "false"]
+  EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
 
 Resources:
   Constants:
