Turn down old worker tasks

--- a/stacks/container-apps/exchange.prx.org.yml
+++ b/stacks/container-apps/exchange.prx.org.yml
@@ -398,7 +398,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: !If [CreateProductionResources, 6, 1]
+      DesiredCount: 0
       Tags:
         - Key: Project
           Value: exchange
