Add SQS prefix for Networks

--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -355,7 +355,8 @@ Resources:
               Value: !GetAtt TaskUserAccessKey.SecretAccessKey
             - Name: AWS_S3_BUCKET
               Value: !GetAtt Constants.NetworksS3BucketName
-            # TODO Needs an SQS_PREFIX once Exchange is moved to the new cluster
+            - Name: SQS_PREFIX
+              Value: !Ref AnnounceResourcePrefix
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
@@ -724,7 +725,8 @@ Resources:
               Value: !GetAtt TaskUserAccessKey.SecretAccessKey
             - Name: AWS_S3_BUCKET
               Value: !GetAtt Constants.NetworksS3BucketName
-            # TODO Needs an SQS_PREFIX once Exchange is moved to the new cluster
+            - Name: SQS_PREFIX
+              Value: !Ref AnnounceResourcePrefix
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
