--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -244,6 +244,7 @@ Resources:
       AdFilesHostname: a.prxu.org
       MetaHostname: meta.prx.org
 
+  # START LEGACY ===============================================================
   # Root stacks
   ServerlessRootStack:
     Type: AWS::CloudFormation::Stack
@@ -312,6 +313,7 @@ Resources:
           Value: !Ref AWS::StackId
       TemplateURL: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/dovetail-stitch-lambda.yml"]]
       TimeoutInMinutes: 5
+  # END LEGACY =================================================================
 
   SharedVpcStack:
     Type: AWS::CloudFormation::Stack
