--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -461,9 +461,9 @@ Resources:
         - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
       Parameters:
         VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
-        VPCSubnet1: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
-        VPCSubnet2: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
-        VPCSubnet3: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
+        VpcPrivateSubnet1Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
+        VpcPrivateSubnet2Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
+        VpcPrivateSubnet3Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
         RootStackId: !GetAtt Constants.RootStackId
         RootStackName: !GetAtt Constants.RootStackName
         EnvironmentType: !Ref EnvironmentType
