Fix date format for CUR S3 object keys

--- a/etc/cost-and-usage-report/template.yml
+++ b/etc/cost-and-usage-report/template.yml
@@ -144,7 +144,7 @@ Resources:
           projection.enabled: "true"
           projection.report_period.type: date
           projection.report_period.range: !Sub NOW-${kPartitionRange},NOW
-          projection.report_period.format: "'year='yyyy'/month='MM"
+          projection.report_period.format: "'year='yyyy'/month='M"
           projection.report_period.interval: "1"
           projection.report_period.interval.unit: MONTHS
           storage.location.template: !Sub s3://${ReportBucket}/${kDailyPrefix}/${DailyAthenaReportDefinition}/${DailyAthenaReportDefinition}/${!report_period}/
