--- a/stacks/shared-redis.yml
+++ b/stacks/shared-redis.yml
@@ -158,6 +158,8 @@ Resources:
         - { Key: prx:dev:application, Value: Common }
 
 Outputs:
+  SecurityGroupId:
+    Value: !GetAtt RedisSecurityGroup.GroupId
   ReplicationGroupName:
     Value: !Ref RedisReplicationGroup
   ReplicationGroupEndpointAddress:
