--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -41,6 +41,7 @@ Parameters:
   MetaHostname: { Type: String }
   SharedAuroraMysqlEndpoint: { Type: String }
   SharedAuroraMysqlPort: { Type: String }
+  SharedRedisSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   SharedRedisReplicationGroupEndpointAddress: { Type: String }
   SharedRedisReplicationGroupEndpointPort: { Type: String }
   AnnounceResourcePrefix: { Type: String }
@@ -199,6 +200,7 @@ Resources:
         DovetailCountedBytesKinesisArn: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-counts-lambda/KINESIS_OUT
         SharedRedisReplicationGroupEndpointAddress: !Ref SharedRedisReplicationGroupEndpointAddress
         SharedRedisReplicationGroupEndpointPort: !Ref SharedRedisReplicationGroupEndpointPort
+        SharedRedisSecurityGroupId: !Ref SharedRedisSecurityGroupId
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
