--- a/stacks/apps/dovetail-counts.yml
+++ b/stacks/apps/dovetail-counts.yml
@@ -69,7 +69,7 @@ Resources:
     Type: AWS::EC2::SecurityGroupIngress
     Properties:
       Description: Allow Redis traffic from the Counts SG
-      SourceSecurityGroupId: !GetAtt AWS::EC2::SecurityGroup.GroupId
+      SourceSecurityGroupId: !GetAtt CountsFunctionSecurityGroup.GroupId
       FromPort: 6737
       GroupId: !Ref SharedRedisSecurityGroupId
       IpProtocol: tcp
