--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -221,3 +221,7 @@ Resources:
         # TTBoOK
         - { Type: A, Name: !Sub "pf9172ttbk.${Domain}", AliasTarget: { DNSName: "d2477qmman2mwe.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf9172ttbk.${Domain}", AliasTarget: { DNSName: "d2477qmman2mwe.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # It's Lit
+        - { Type: A, Name: !Sub "pf5698bksp.${Domain}", AliasTarget: { DNSName: "d2tq03grnpvp5i.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf5698bksp.${Domain}", AliasTarget: { DNSName: "d2tq03grnpvp5i.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
