Turn off stack outputs

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -650,29 +650,28 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
-
-Outputs:
-  VPC:
-    Description: Resource ID for the VPC
-    Value: !Ref VPC
-  SecurityGroup:
-    Description: Default Security Group for the VPC
-    Value: !GetAtt VPC.DefaultSecurityGroup
-  Subnet1:
-    Description: Resource ID (eg subnet-e19f0178) for subnet 1
-    Value: !Ref Subnet1
-  Subnet2:
-    Description: Resource ID (eg subnet-e19f0178) for subnet 2
-    Value: !Ref Subnet2
-  Subnet3:
-    Description: Resource ID (eg subnet-e19f0178) for subnet 3
-    Value: !Ref Subnet3
-  Subnet1AvailabilityZone:
-    Description: The availability zone (eg us-east-1a) for subnet 1
-    Value: !GetAtt Subnet1.AvailabilityZone
-  Subnet2AvailabilityZone:
-    Description: The availability zone (eg us-east-1a) for subnet 2
-    Value: !GetAtt Subnet2.AvailabilityZone
-  Subnet3AvailabilityZone:
-    Description: The availability zone (eg us-east-1a) for subnet 3
-    Value: !GetAtt Subnet3.AvailabilityZone
+# Outputs:
+#   VPC:
+#     Description: Resource ID for the VPC
+#     Value: !Ref VPC
+#   SecurityGroup:
+#     Description: Default Security Group for the VPC
+#     Value: !GetAtt VPC.DefaultSecurityGroup
+#   Subnet1:
+#     Description: Resource ID (eg subnet-e19f0178) for subnet 1
+#     Value: !Ref Subnet1
+#   Subnet2:
+#     Description: Resource ID (eg subnet-e19f0178) for subnet 2
+#     Value: !Ref Subnet2
+#   Subnet3:
+#     Description: Resource ID (eg subnet-e19f0178) for subnet 3
+#     Value: !Ref Subnet3
+#   Subnet1AvailabilityZone:
+#     Description: The availability zone (eg us-east-1a) for subnet 1
+#     Value: !GetAtt Subnet1.AvailabilityZone
+#   Subnet2AvailabilityZone:
+#     Description: The availability zone (eg us-east-1a) for subnet 2
+#     Value: !GetAtt Subnet2.AvailabilityZone
+#   Subnet3AvailabilityZone:
+#     Description: The availability zone (eg us-east-1a) for subnet 3
+#     Value: !GetAtt Subnet3.AvailabilityZone
