Turn off CloudWatch Logs VPC endpoint

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -178,20 +178,20 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
-  CloudWatchLogsVpcEndpoint:
-    # https://docs.aws.amazon.com/AmazonCloudWatch/latest/logs/cloudwatch-logs-and-interface-VPC.html
-    Type: AWS::EC2::VPCEndpoint
-    Properties:
-      PrivateDnsEnabled: true
-      SecurityGroupIds:
-        - !Ref AwsServiceInterfaceEndpointsSecurityGroup
-      ServiceName: !Sub com.amazonaws.${AWS::Region}.logs
-      SubnetIds:
-        - !Ref Subnet1
-        - !Ref Subnet2
-        - !Ref Subnet3
-      VpcEndpointType: Interface
-      VpcId: !Ref VPC
+  # CloudWatchLogsVpcEndpoint:
+  #   # https://docs.aws.amazon.com/AmazonCloudWatch/latest/logs/cloudwatch-logs-and-interface-VPC.html
+  #   Type: AWS::EC2::VPCEndpoint
+  #   Properties:
+  #     PrivateDnsEnabled: true
+  #     SecurityGroupIds:
+  #       - !Ref AwsServiceInterfaceEndpointsSecurityGroup
+  #     ServiceName: !Sub com.amazonaws.${AWS::Region}.logs
+  #     SubnetIds:
+  #       - !Ref Subnet1
+  #       - !Ref Subnet2
+  #       - !Ref Subnet3
+  #     VpcEndpointType: Interface
+  #     VpcId: !Ref VPC
   # EcrVpcEndpoint:
   #   # https://docs.aws.amazon.com/AmazonECR/latest/userguide/vpc-endpoints.html#ecr-vpc-endpoint-considerations
   #   Type: AWS::EC2::VPCEndpoint
