--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -315,287 +315,287 @@ Resources:
       SubnetId: !Ref Subnet3
       RouteTableId: !Ref RouteTable
 
-  # Network ACL
-  NetworkAcl:
-    Type: AWS::EC2::NetworkAcl
-    Properties:
-      VpcId: !Ref VPC
-      Tags:
-        - Key: Project
-          Value: platform.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: Name
-          Value: !Sub Platform-${EnvironmentType}
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+  # # Network ACL
+  # NetworkAcl:
+  #   Type: AWS::EC2::NetworkAcl
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     Tags:
+  #       - Key: Project
+  #         Value: platform.prx.org
+  #       - Key: Environment
+  #         Value: !Ref EnvironmentType
+  #       - Key: Name
+  #         Value: !Sub Platform-${EnvironmentType}
+  #       - Key: prx:cloudformation:stack-name
+  #         Value: !Ref AWS::StackName
+  #       - Key: prx:cloudformation:stack-id
+  #         Value: !Ref AWS::StackId
 
-  # ACL inbound rules
-  InboundIPv4HTTPSNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      CidrBlock: 0.0.0.0/0
-      Egress: false
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 443
-        To: 443
-      Protocol: 6 # TCP
-      RuleAction: allow
-      RuleNumber: 120
-  InboundIPv6HTTPSNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      Egress: false
-      Ipv6CidrBlock: ::/0
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 443
-        To: 443
-      Protocol: 6 # TCP
-      RuleAction: allow
-      RuleNumber: 121
+  # # ACL inbound rules
+  # InboundIPv4HTTPSNetworkAclEntry:
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     CidrBlock: 0.0.0.0/0
+  #     Egress: false
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 443
+  #       To: 443
+  #     Protocol: 6 # TCP
+  #     RuleAction: allow
+  #     RuleNumber: 120
+  # InboundIPv6HTTPSNetworkAclEntry:
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     Egress: false
+  #     Ipv6CidrBlock: ::/0
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 443
+  #       To: 443
+  #     Protocol: 6 # TCP
+  #     RuleAction: allow
+  #     RuleNumber: 121
 
-  InboundIPv4HTTPNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      CidrBlock: 0.0.0.0/0
-      Egress: false
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 80
-        To: 80
-      Protocol: 6 # TCP
-      RuleAction: allow
-      RuleNumber: 130
-  InboundIPv6HTTPNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      Egress: false
-      Ipv6CidrBlock: ::/0
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 80
-        To: 80
-      Protocol: 6 # TCP
-      RuleAction: allow
-      RuleNumber: 131
+  # InboundIPv4HTTPNetworkAclEntry:
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     CidrBlock: 0.0.0.0/0
+  #     Egress: false
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 80
+  #       To: 80
+  #     Protocol: 6 # TCP
+  #     RuleAction: allow
+  #     RuleNumber: 130
+  # InboundIPv6HTTPNetworkAclEntry:
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     Egress: false
+  #     Ipv6CidrBlock: ::/0
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 80
+  #       To: 80
+  #     Protocol: 6 # TCP
+  #     RuleAction: allow
+  #     RuleNumber: 131
 
-  InboundIPv4UDPHTTPSNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      CidrBlock: 0.0.0.0/0
-      Egress: false
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 443
-        To: 443
-      Protocol: 17 # UDP
-      RuleAction: allow
-      RuleNumber: 140
-  InboundIPv6UDPHTTPSNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      Egress: false
-      Ipv6CidrBlock: ::/0
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 443
-        To: 443
-      Protocol: 17 # UDP
-      RuleAction: allow
-      RuleNumber: 141
+  # InboundIPv4UDPHTTPSNetworkAclEntry:
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     CidrBlock: 0.0.0.0/0
+  #     Egress: false
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 443
+  #       To: 443
+  #     Protocol: 17 # UDP
+  #     RuleAction: allow
+  #     RuleNumber: 140
+  # InboundIPv6UDPHTTPSNetworkAclEntry:
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     Egress: false
+  #     Ipv6CidrBlock: ::/0
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 443
+  #       To: 443
+  #     Protocol: 17 # UDP
+  #     RuleAction: allow
+  #     RuleNumber: 141
 
-  InboundIPv4UDPHTTPNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      CidrBlock: 0.0.0.0/0
-      Egress: false
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 80
-        To: 80
-      Protocol: 17 # UDP
-      RuleAction: allow
-      RuleNumber: 150
-  InboundIPv6UDPHTTPNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      Egress: false
-      Ipv6CidrBlock: ::/0
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 80
-        To: 80
-      Protocol: 17 # UDP
-      RuleAction: allow
-      RuleNumber: 151
+  # InboundIPv4UDPHTTPNetworkAclEntry:
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     CidrBlock: 0.0.0.0/0
+  #     Egress: false
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 80
+  #       To: 80
+  #     Protocol: 17 # UDP
+  #     RuleAction: allow
+  #     RuleNumber: 150
+  # InboundIPv6UDPHTTPNetworkAclEntry:
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     Egress: false
+  #     Ipv6CidrBlock: ::/0
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 80
+  #       To: 80
+  #     Protocol: 17 # UDP
+  #     RuleAction: allow
+  #     RuleNumber: 151
 
-  InboundIPv4SSHNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      CidrBlock: 0.0.0.0/0
-      Egress: false
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 22
-        To: 22
-      Protocol: 6 # TCP
-      RuleAction: allow
-      RuleNumber: 230
-  InboundIPv6SSHNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      Egress: false
-      Ipv6CidrBlock: ::/0
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 22
-        To: 22
-      Protocol: 6 # TCP
-      RuleAction: allow
-      RuleNumber: 231
+  # InboundIPv4SSHNetworkAclEntry:
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     CidrBlock: 0.0.0.0/0
+  #     Egress: false
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 22
+  #       To: 22
+  #     Protocol: 6 # TCP
+  #     RuleAction: allow
+  #     RuleNumber: 230
+  # InboundIPv6SSHNetworkAclEntry:
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     Egress: false
+  #     Ipv6CidrBlock: ::/0
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 22
+  #       To: 22
+  #     Protocol: 6 # TCP
+  #     RuleAction: allow
+  #     RuleNumber: 231
 
-  InboundIPv4UDPSSHNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      CidrBlock: 0.0.0.0/0
-      Egress: false
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 22
-        To: 22
-      Protocol: 17 # UDP
-      RuleAction: allow
-      RuleNumber: 240
-  InboundIPv6UDPSSHNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      Egress: false
-      Ipv6CidrBlock: ::/0
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 22
-        To: 22
-      Protocol: 17 # UDP
-      RuleAction: allow
-      RuleNumber: 241
+  # InboundIPv4UDPSSHNetworkAclEntry:
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     CidrBlock: 0.0.0.0/0
+  #     Egress: false
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 22
+  #       To: 22
+  #     Protocol: 17 # UDP
+  #     RuleAction: allow
+  #     RuleNumber: 240
+  # InboundIPv6UDPSSHNetworkAclEntry:
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     Egress: false
+  #     Ipv6CidrBlock: ::/0
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 22
+  #       To: 22
+  #     Protocol: 17 # UDP
+  #     RuleAction: allow
+  #     RuleNumber: 241
 
-  InboundIPv4NTPNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      CidrBlock: 0.0.0.0/0
-      Egress: false
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 123
-        To: 123
-      Protocol: 17 # UDP
-      RuleAction: allow
-      RuleNumber: 250
-  InboundIPv6NTPNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      Egress: false
-      Ipv6CidrBlock: ::/0
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 123
-        To: 123
-      Protocol: 17 # UDP
-      RuleAction: allow
-      RuleNumber: 251
+  # InboundIPv4NTPNetworkAclEntry:
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     CidrBlock: 0.0.0.0/0
+  #     Egress: false
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 123
+  #       To: 123
+  #     Protocol: 17 # UDP
+  #     RuleAction: allow
+  #     RuleNumber: 250
+  # InboundIPv6NTPNetworkAclEntry:
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     Egress: false
+  #     Ipv6CidrBlock: ::/0
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 123
+  #       To: 123
+  #     Protocol: 17 # UDP
+  #     RuleAction: allow
+  #     RuleNumber: 251
 
-  InboundIPv4ReturnTrafficNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      CidrBlock: 0.0.0.0/0
-      Egress: false
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 1024
-        To: 65535
-      Protocol: 6 # TCP
-      RuleAction: allow
-      RuleNumber: 520
-  InboundIPv6ReturnTrafficNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      Egress: false
-      Ipv6CidrBlock: ::/0
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 1024
-        To: 65535
-      Protocol: 6 # TCP
-      RuleAction: allow
-      RuleNumber: 521
+  # InboundIPv4ReturnTrafficNetworkAclEntry:
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     CidrBlock: 0.0.0.0/0
+  #     Egress: false
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 1024
+  #       To: 65535
+  #     Protocol: 6 # TCP
+  #     RuleAction: allow
+  #     RuleNumber: 520
+  # InboundIPv6ReturnTrafficNetworkAclEntry:
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     Egress: false
+  #     Ipv6CidrBlock: ::/0
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 1024
+  #       To: 65535
+  #     Protocol: 6 # TCP
+  #     RuleAction: allow
+  #     RuleNumber: 521
 
-  InboundIPv4UDPReturnTrafficNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      CidrBlock: 0.0.0.0/0
-      Egress: false
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 1024
-        To: 65535
-      Protocol: 17 # UDP
-      RuleAction: allow
-      RuleNumber: 530
-  InboundIPv6UDPReturnTrafficNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      Egress: false
-      Ipv6CidrBlock: ::/0
-      NetworkAclId: !Ref NetworkAcl
-      PortRange:
-        From: 1024
-        To: 65535
-      Protocol: 17 # UDP
-      RuleAction: allow
-      RuleNumber: 531
+  # InboundIPv4UDPReturnTrafficNetworkAclEntry:
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     CidrBlock: 0.0.0.0/0
+  #     Egress: false
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 1024
+  #       To: 65535
+  #     Protocol: 17 # UDP
+  #     RuleAction: allow
+  #     RuleNumber: 530
+  # InboundIPv6UDPReturnTrafficNetworkAclEntry:
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     Egress: false
+  #     Ipv6CidrBlock: ::/0
+  #     NetworkAclId: !Ref NetworkAcl
+  #     PortRange:
+  #       From: 1024
+  #       To: 65535
+  #     Protocol: 17 # UDP
+  #     RuleAction: allow
+  #     RuleNumber: 531
 
-  # ACL outbound rules
-  OutboudIPv4TrafficNetworkAclEntry:
-    # Allow allw outbound IPv4 traffic
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      CidrBlock: 0.0.0.0/0
-      Egress: true
-      NetworkAclId: !Ref NetworkAcl
-      Protocol: -1 # All
-      RuleAction: allow
-      RuleNumber: 120
-  OutboudIPv6TrafficNetworkAclEntry:
-    # Allow allw outbound IPv6 traffic
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      Egress: true
-      Ipv6CidrBlock: ::/0
-      NetworkAclId: !Ref NetworkAcl
-      Protocol: -1 # All
-      RuleAction: allow
-      RuleNumber: 121
+  # # ACL outbound rules
+  # OutboudIPv4TrafficNetworkAclEntry:
+  #   # Allow allw outbound IPv4 traffic
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     CidrBlock: 0.0.0.0/0
+  #     Egress: true
+  #     NetworkAclId: !Ref NetworkAcl
+  #     Protocol: -1 # All
+  #     RuleAction: allow
+  #     RuleNumber: 120
+  # OutboudIPv6TrafficNetworkAclEntry:
+  #   # Allow allw outbound IPv6 traffic
+  #   Type: AWS::EC2::NetworkAclEntry
+  #   Properties:
+  #     Egress: true
+  #     Ipv6CidrBlock: ::/0
+  #     NetworkAclId: !Ref NetworkAcl
+  #     Protocol: -1 # All
+  #     RuleAction: allow
+  #     RuleNumber: 121
 
-  # Public subnet ACL associations
-  Subnet1NetworkAclAssociation:
-    Type: AWS::EC2::SubnetNetworkAclAssociation
-    Properties:
-      SubnetId: !Ref Subnet1
-      NetworkAclId: !Ref NetworkAcl
-  Subnet2NetworkAclAssociation:
-    Type: AWS::EC2::SubnetNetworkAclAssociation
-    Properties:
-      SubnetId: !Ref Subnet2
-      NetworkAclId: !Ref NetworkAcl
-  Subnet3NetworkAclAssociation:
-    Type: AWS::EC2::SubnetNetworkAclAssociation
-    Properties:
-      SubnetId: !Ref Subnet3
-      NetworkAclId: !Ref NetworkAcl
+  # # Public subnet ACL associations
+  # Subnet1NetworkAclAssociation:
+  #   Type: AWS::EC2::SubnetNetworkAclAssociation
+  #   Properties:
+  #     SubnetId: !Ref Subnet1
+  #     NetworkAclId: !Ref NetworkAcl
+  # Subnet2NetworkAclAssociation:
+  #   Type: AWS::EC2::SubnetNetworkAclAssociation
+  #   Properties:
+  #     SubnetId: !Ref Subnet2
+  #     NetworkAclId: !Ref NetworkAcl
+  # Subnet3NetworkAclAssociation:
+  #   Type: AWS::EC2::SubnetNetworkAclAssociation
+  #   Properties:
+  #     SubnetId: !Ref Subnet3
+  #     NetworkAclId: !Ref NetworkAcl
 
   # DHCP
   DHCPOptions:
