Turn off VPCE security groups

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -116,31 +116,31 @@ Resources:
   #     ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
   #     VpcEndpointType: Gateway
   #     VpcId: !Ref VPC
-  KinesisEndpointSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      VpcId: !Ref VPC
-      GroupDescription: Allow kinesis traffic
-      SecurityGroupIngress:
-        - CidrIp: 0.0.0.0/0
-          IpProtocol: tcp
-          FromPort: 443
-          ToPort: 443
-        - CidrIpv6: ::/0
-          IpProtocol: tcp
-          FromPort: 443
-          ToPort: 443
-      Tags:
-        - Key: Project
-          Value: platform.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: Name
-          Value: !Sub Platform-${EnvironmentType}
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+  # KinesisEndpointSecurityGroup:
+  #   Type: AWS::EC2::SecurityGroup
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     GroupDescription: Allow kinesis traffic
+  #     SecurityGroupIngress:
+  #       - CidrIp: 0.0.0.0/0
+  #         IpProtocol: tcp
+  #         FromPort: 443
+  #         ToPort: 443
+  #       - CidrIpv6: ::/0
+  #         IpProtocol: tcp
+  #         FromPort: 443
+  #         ToPort: 443
+  #     Tags:
+  #       - Key: Project
+  #         Value: platform.prx.org
+  #       - Key: Environment
+  #         Value: !Ref EnvironmentType
+  #       - Key: Name
+  #         Value: !Sub Platform-${EnvironmentType}
+  #       - Key: prx:cloudformation:stack-name
+  #         Value: !Ref AWS::StackName
+  #       - Key: prx:cloudformation:stack-id
+  #         Value: !Ref AWS::StackId
   # KinesisEndpoint:
   #   Type: AWS::EC2::VPCEndpoint
   #   Properties:
@@ -155,29 +155,29 @@ Resources:
   #       - !Ref Subnet3
   #     VpcEndpointType: Interface
   #     VpcId: !Ref VPC
-  AwsServiceInterfaceEndpointsSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      VpcId: !Ref VPC
-      GroupDescription: Allow endpoint traffic
-      SecurityGroupIngress:
-        - CidrIp: 0.0.0.0/0
-          IpProtocol: tcp
-          FromPort: 443
-          ToPort: 443
-        - CidrIpv6: ::/0
-          IpProtocol: tcp
-          FromPort: 443
-          ToPort: 443
-      Tags:
-        - Key: Project
-          Value: platform.prx.org
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-EcsEndpointsSecurityGroup
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
+  # AwsServiceInterfaceEndpointsSecurityGroup:
+  #   Type: AWS::EC2::SecurityGroup
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     GroupDescription: Allow endpoint traffic
+  #     SecurityGroupIngress:
+  #       - CidrIp: 0.0.0.0/0
+  #         IpProtocol: tcp
+  #         FromPort: 443
+  #         ToPort: 443
+  #       - CidrIpv6: ::/0
+  #         IpProtocol: tcp
+  #         FromPort: 443
+  #         ToPort: 443
+  #     Tags:
+  #       - Key: Project
+  #         Value: platform.prx.org
+  #       - Key: Name
+  #         Value: !Sub ${AWS::StackName}-EcsEndpointsSecurityGroup
+  #       - Key: prx:cloudformation:stack-name
+  #         Value: !Ref AWS::StackName
+  #       - Key: prx:cloudformation:stack-id
+  #         Value: !Ref AWS::StackId
   # CloudWatchLogsVpcEndpoint:
   #   # https://docs.aws.amazon.com/AmazonCloudWatch/latest/logs/cloudwatch-logs-and-interface-VPC.html
   #   Type: AWS::EC2::VPCEndpoint
