Make old VPC production-only

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -229,6 +229,7 @@ Resources:
   # App and shared resource stacks
   VPCStack:
     Type: AWS::CloudFormation::Stack
+    Condition: IsProduction
     Properties:
       NotificationARNs:
         - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
