Use constant instead of FindInMap

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -185,6 +185,7 @@ Resources:
       ServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
       RootStackName: !Ref AWS::StackName
       RootStackId: !Ref AWS::StackId
+      EnvironmentTypeAbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
       SourceBucketName:
         Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureSourceBucket
       DeploymentPackageBucketName:
@@ -280,7 +281,7 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         RootStackName: !GetAtt Constants.RootStackName
         RootStackId: !GetAtt Constants.RootStackName
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        EnvironmentTypeAbbreviation: !GetAtt Constants.EnvironmentTypeAbbreviation
         VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
         VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
         VpcPublicSubnet2Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
@@ -345,7 +346,7 @@ Resources:
         - !GetAtt Constants.CloudFormationNotificationArn
       Parameters:
         EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        EnvironmentTypeAbbreviation: !GetAtt Constants.EnvironmentTypeAbbreviation
         RootStackName: !GetAtt Constants.RootStackName
         RootStackId: !GetAtt Constants.RootStackName
         SlackMessageRelaySnsTopicArn:
@@ -412,7 +413,7 @@ Resources:
         RootStackId: !GetAtt Constants.RootStackId
         RootStackName: !GetAtt Constants.RootStackName
         EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        EnvironmentTypeAbbreviation: !GetAtt Constants.EnvironmentTypeAbbreviation
         CloudWatchAlarmTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.CloudWatchAlarmTaggerServiceToken
         SourceSecurityGroupId1: !GetAtt SharedEcsAsgSecurityGroupStack.Outputs.InstanceSecurityGroupId
         StagingInstanceType: cache.t4g.micro
@@ -436,7 +437,7 @@ Resources:
         RootStackName: !GetAtt Constants.RootStackName
         RootStackId: !GetAtt Constants.RootStackId
         EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        EnvironmentTypeAbbreviation: !GetAtt Constants.EnvironmentTypeAbbreviation
         VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
         VpcPrivateSubnet1Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
         VpcPrivateSubnet2Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
@@ -463,7 +464,7 @@ Resources:
         RootStackName: !GetAtt Constants.RootStackName
         RootStackId: !GetAtt Constants.RootStackId
         EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        EnvironmentTypeAbbreviation: !GetAtt Constants.EnvironmentTypeAbbreviation
         HashStringServiceToken: !GetAtt CustomResourcesStack.Outputs.HashStringServiceToken
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
@@ -492,7 +493,7 @@ Resources:
         SecretsBase: !GetAtt Constants.SecretsBaseRegion
         SecretsStackName: !Ref SecretsStackName
         EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        EnvironmentTypeAbbreviation: !GetAtt Constants.EnvironmentTypeAbbreviation
         RegionMode: !Ref RegionMode
         RootStackName: !GetAtt Constants.RootStackName
         RootStackId: !GetAtt Constants.RootStackId
@@ -593,7 +594,7 @@ Resources:
         SecretsBase: !GetAtt Constants.SecretsBaseRegion
         SecretsStackName: !Ref SecretsStackName
         EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        EnvironmentTypeAbbreviation: !GetAtt Constants.EnvironmentTypeAbbreviation
         RegionMode: !Ref RegionMode
         RootStackName: !GetAtt Constants.RootStackName
         RootStackId: !GetAtt Constants.RootStackId
@@ -702,7 +703,7 @@ Resources:
         NewRelicApiKeyPrxLite: !Ref NewRelicApiKeyPrxLite
         SecretsStackName: !Ref SecretsStackName
         EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        EnvironmentTypeAbbreviation: !GetAtt Constants.EnvironmentTypeAbbreviation
         RegionMode: !Ref RegionMode
         RootStackName: !GetAtt Constants.RootStackName
         RootStackId: !GetAtt Constants.RootStackId
