Pass env lowercase to middle stacks

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -16,6 +16,7 @@ Parameters:
   EcsClusterName: { Type: String }
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
+  EnvironmentTypeLowercase: { Type: String }
   RegionMode: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
