--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -186,6 +186,7 @@ Resources:
       RootStackName: !Ref AWS::StackName
       RootStackId: !Ref AWS::StackId
       EnvironmentTypeAbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+      EnvironmentTypeLowercase: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, lowercase]
       SourceBucketName:
         Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureSourceBucket
       DeploymentPackageBucketName:
@@ -494,6 +495,7 @@ Resources:
         SecretsStackName: !Ref SecretsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !GetAtt Constants.EnvironmentTypeAbbreviation
+        EnvironmentTypeLowercase: !GetAtt Constants.EnvironmentTypeLowercase
         RegionMode: !Ref RegionMode
         RootStackName: !GetAtt Constants.RootStackName
         RootStackId: !GetAtt Constants.RootStackId
@@ -595,6 +597,7 @@ Resources:
         SecretsStackName: !Ref SecretsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !GetAtt Constants.EnvironmentTypeAbbreviation
+        EnvironmentTypeLowercase: !GetAtt Constants.EnvironmentTypeLowercase
         RegionMode: !Ref RegionMode
         RootStackName: !GetAtt Constants.RootStackName
         RootStackId: !GetAtt Constants.RootStackId
@@ -704,6 +707,7 @@ Resources:
         SecretsStackName: !Ref SecretsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !GetAtt Constants.EnvironmentTypeAbbreviation
+        EnvironmentTypeLowercase: !GetAtt Constants.EnvironmentTypeLowercase
         RegionMode: !Ref RegionMode
         RootStackName: !GetAtt Constants.RootStackName
         RootStackId: !GetAtt Constants.RootStackId
